<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mx.randalf.converter</groupId>
	<artifactId>RandalfConverter</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<modules>
		<module>RandalfConverterIIPImage</module>
		<module>RandalfConverterText</module>
		<module>RandalfConverterXls2Xml</module>
		<module>RandalfConverterXsl</module>
	</modules>
	<distributionManagement>
		<repository>
			<id>mvn-bncf</id>
			<name>Maven BNCF-releases</name>
			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
		</repository>
	</distributionManagement>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.9</maven.compiler.source>
		<maven.compiler.target>1.9</maven.compiler.target>
	</properties>

</project>
